index.html .. rough cut.

--- a/index.html
+++ b/index.html
@@ -55,20 +55,20 @@
                 <ul class="loginbar pull-right">
                     <li class="hoverSelector">
                         <i class="fa fa-globe"></i>
-                        <a>Languages</a>
+                        <a>언어</a>
                         <ul class="languages hoverSelectorBlock">
                             <li class="active">
                                 <a href="#">English <i class="fa fa-check"></i></a> 
                             </li>
-                            <li><a href="#">Spanish</a></li>
-                            <li><a href="#">Russian</a></li>
-                            <li><a href="#">German</a></li>
+                            <li><a href="#">한국어</a></li>
+                            <li><a href="#">중국어</a></li>
+                            
                         </ul>
                     </li>
                     <li class="topbar-devider"></li>   
-                    <li><a href="page_faq.html">Help</a></li>  
+                    <li><a href="page_faq.html">사이트 맵</a></li>  
                     <li class="topbar-devider"></li>   
-                    <li><a href="page_login.html">Login</a></li>   
+                    <li><a href="page_login.html">로그인</a></li>   
                 </ul>
             </div>
             <!-- End Topbar -->
@@ -201,11 +201,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-9 animated fadeInLeft">
-                    <span>Unify is a clean and fully responsive incredible Template.</span>
-                    <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi  vehicula sem ut volutpat. Ut non libero magna fusce condimentum eleifend enim a feugiat corrupti quos.</p>
+                    <span>BIZiq 사이트가 대대적인 개편을 하였습니다. </span>
+                    <p>지금까지의 제로보드에서 구동되던 위험하던 BIZiq사이트를 </p>
+                    <p>최근의 웹 트렌드에 맞춰서 모바일적용되고 좀더 안전한 좀더 강력한 사이트로 변모 시켰습니다.</p>
+                    <p>간략하게 다음의 밑의 기능을 제공합니다. </p>
                 </div>            
                 <div class="col-md-3 btn-buy animated fadeInRight">
-                    <a href="#" class="btn-u btn-u-lg"><i class="fa fa-cloud-download"></i> Download Now</a>
+                    <a href="#" class="btn-u btn-u-lg"><i class="fa fa-cloud-download"></i> 좀 더 알아보기</a>
                 </div>
             </div>
         </div>
@@ -220,8 +222,8 @@
         		<div class="service">
                     <i class="fa fa-compress service-icon"></i>
         			<div class="desc">
-        				<h4>Fully Responsive</h4>
-                        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus etiam sem...</p>
+        				<h4>반응형 웹 </h4>
+                        <p>최근은 컴퓨터 뿐만이 아니라, 모바일, 태블릿으로도 언제든지 접속하는 시대입니다. 때문에 다기종 기기와 여러 브라우저에 맞춰 작업을 하였습니다. </p>
         			</div>
         		</div>	
         	</div>
@@ -230,7 +232,7 @@
                     <i class="fa fa-cogs service-icon"></i>
         			<div class="desc">
         				<h4>HTML5 + CSS3</h4>
-                        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus etiam sem...</p>
+                        <p>최근의 웹 언어에 맞춰서 최신 기능을 적용을 하였습니다. 커스터마이징이 힘든 구매한 웹템플릿과 달리 직접 손코딩을 해가며 한땀한땀 코딩하였습니다.</p>
         			</div>
         		</div>	
         	</div>
@@ -238,8 +240,9 @@
         		<div class="service">
                     <i class="fa fa-rocket service-icon"></i>
         			<div class="desc">
-        				<h4>Launch Ready</h4>
-                        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus etiam sem...</p>
+        				<h4>SEO 강화</h4>
+                        <p>아무리 좋은 사이트를 만들어도 알려지지 않으면, 아무도 찾지 못하는 심해 속의 보물에 불과합니다. 
+                            이번 작업에서는 SEO(검색 엔진 최적화)작업을 통해 웹 세상에 한걸음 나아가고자 합니다. </p>
         			</div>
         		</div>	
         	</div>			    
@@ -247,7 +250,7 @@
     	<!-- End Service Blokcs -->
 
     	<!-- Recent Works -->
-        <div class="headline"><h2>Recent Works</h2></div>
+        <div class="headline"><h2>최근 게시물</h2></div>
         <div class="row margin-bottom-20">
             <div class="col-md-3 col-sm-6">
                 <div class="thumbnails thumbnail-style thumbnail-kenburn">
@@ -312,7 +315,7 @@
     	<div class="row margin-bottom-30">
         	<!-- Welcome Block -->
     		<div class="col-md-8 md-margin-bottom-40">
-    			<div class="headline"><h2>Welcome To Unify</h2></div>
+    			<div class="headline"><h2>가장 뜨거운 게시물</h2></div>
                 <div class="row">
                     <div class="col-sm-4">
                         <img class="img-responsive margin-bottom-20" src="assets/img/main/img18.jpg" alt="">
@@ -336,7 +339,7 @@
 
             <!-- Latest Shots -->
             <div class="col-md-4">
-    			<div class="headline"><h2>Latest Shots</h2></div>
+    			<div class="headline"><h2>최근 이미지</h2></div>
     			<div id="myCarousel" class="carousel slide carousel-v1">
                     <div class="carousel-inner">
                         <div class="item active">
@@ -373,7 +376,7 @@
     	<!-- End Info Blokcs -->
 
         <!-- Owl Clients v1 -->
-        <div class="headline"><h2>Our Clients</h2></div>        
+        <div class="headline"><h2>기타 링크</h2></div>        
         <div class="owl-clients-v1">
             <div class="item">
                 <img src="assets/img/clients4/1.png" alt="">
@@ -477,7 +480,7 @@
                     <div class="col-md-6">                     
                         <p>
                             2015 &copy; All Rights Reserved.
-                           <a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a>
+                           <a href="#">개인정보 취급 방침</a> | <a href="#">서비스 이용 약관</a>
                         </p>
                     </div>
 
