second commit. seat move!

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <ul class="nav navbar-nav">
                     <!-- Home -->
                     <li>
-                        <a href="javascript:void(0);">
+                        <a href="index.html">
                             홈
                         </a>
                     </li>
@@ -100,7 +100,7 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li>
-                                <a href="javascript:void(0);">사이트 소개</a>
+                                <a href="intro_site.html">사이트 소개</a>
                             </li>                           
                             <li>
                                 <a href="javascript:void(0);">주인장 소개</a>
@@ -227,6 +227,16 @@
         			</div>
         		</div>	
         	</div>
+            <div class="col-md-4">
+                <div class="service">
+                    <i class="fa fa-rocket service-icon"></i>
+                    <div class="desc">
+                        <h4>SEO 강화</h4>
+                        <p>아무리 좋은 사이트를 만들어도 알려지지 않으면, 아무도 찾지 못하는 심해 속의 보물에 불과합니다. 
+                            이번 작업에서는 SEO(검색 엔진 최적화)작업을 통해 웹 세상에 한걸음 나아가고자 합니다. </p>
+                    </div>
+                </div>  
+            </div>  
         	<div class="col-md-4">
         		<div class="service">
                     <i class="fa fa-cogs service-icon"></i>
@@ -236,16 +246,7 @@
         			</div>
         		</div>	
         	</div>
-        	<div class="col-md-4">
-        		<div class="service">
-                    <i class="fa fa-rocket service-icon"></i>
-        			<div class="desc">
-        				<h4>SEO 강화</h4>
-                        <p>아무리 좋은 사이트를 만들어도 알려지지 않으면, 아무도 찾지 못하는 심해 속의 보물에 불과합니다. 
-                            이번 작업에서는 SEO(검색 엔진 최적화)작업을 통해 웹 세상에 한걸음 나아가고자 합니다. </p>
-        			</div>
-        		</div>	
-        	</div>			    
+        			    
     	</div>
     	<!-- End Service Blokcs -->
 
