--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="윤종욱 교수님의 Business Intelligence">
-    <meta name="author" cont1ent="윤종욱 교수님과 제자 최강용">
+    <meta name="author" content="윤종욱 교수님과 제자 최강용">
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="favicon.ico">
@@ -103,7 +103,7 @@
                                 <a href="intro_site.html">사이트 소개</a>
                             </li>                           
                             <li>
-                                <a href="javascript:void(0);">주인장 소개</a>
+                                <a href="intro_master.html">주인장 소개</a>
                             </li>
                         </ul>
                     </li>
