--- a/index.html
+++ b/index.html
@@ -105,6 +105,9 @@
                             <li>
                                 <a href="intro_master.html">주인장 소개 </a>
                             </li>
+                            <li>
+                                <a href="intro_history.html">사이트 히스토리</a>   
+                            </li>
                         </ul>
                     </li>
                     <!-- End 소개 -->
