로그인, 회원가입 일단 추가

--- a/intro_history.html
+++ b/intro_history.html
@@ -71,7 +71,9 @@
                     <li class="topbar-devider"></li>   
                     <li><a href="page_faq.html">사이트 맵</a></li>  
                     <li class="topbar-devider"></li>   
-                    <li><a href="page_login.html">로그인</a></li>   
+                    <li><a href="page_login.html">로그인</a></li>
+                    <li class="topbar-devider"></li> 
+                    <li><a href="page_registration.html">회원가입</a></li>  
                 </ul>
             </div>
             <!-- End Topbar -->
