기업 아이큐 모델 적용, 나머지 잔작업들 완료

--- a/index.html
+++ b/index.html
@@ -88,11 +88,7 @@
             <div class="container">
                 <ul class="nav navbar-nav">
                     <!-- Home -->
-                    <li>
-                        <a href="index.html">
-                            홈
-                        </a>
-                    </li>
+                    <li><a href="index.html">홈</a></li>
                     <!-- End Home -->
 
                     <!-- 소개 -->                        
@@ -101,15 +97,11 @@
                             Biziq소개
                         </a>
                         <ul class="dropdown-menu">
-                            <li>
-                                <a href="intro_site.html">사이트 소개</a>
-                            </li>                           
-                            <li>
-                                <a href="intro_master.html">주인장 소개 </a>
-                            </li>
-                            <li>
-                                <a href="intro_history.html">사이트 히스토리</a>   
-                            </li>
+                            <li><a href="intro_site.html">사이트 소개#</a></li>                           
+                            <li><a href="intro_master.html">주인장 소개# </a></li>
+                            <li><a href="intro_history.html">사이트 히스토리#</a>   </li>
+                            <li><a href="intro_map.html">사이트 맵#</a></li>
+                            <li><a href="intro_map.html">공지사항@</a></li>
                         </ul>
                     </li>
                     <!-- End 소개 -->
@@ -120,15 +112,24 @@
                             Biziq이야기
                         </a>
                         <ul class="dropdown-menu">
-                            <li>
-                                <a href="javascript:void(0);">기업아이큐 단상</a>
-                            </li>                           
-                            <li>
-                                <a href="javascript:void(0);">일상</a>
-                            </li>
-                             <li>
-                                <a href="javascript:void(0);">책마을 산책</a>
-                            </li>
+                            <li><a href="talk_iqmodel.html">기업IQ 모델</a></li>                           
+                             <li><a href="talk_iq.html.html">기업IQ</a></li>
+                             <li><a href="talk_health.html">기업Health</a></li>
+                             <li><a href="talk_iqtool.html">기업IQ도구</a></li>
+                             <li><a href="talk_healthtool.html">기업Health도구</a></li>
+                             <li><a href="talk_iqaim.html">기업IQ목표</a></li>
+                        </ul>
+                    </li>
+                    <!-- End 이야기 -->
+
+                    <!-- 이야기 -->                        
+                    <li class="dropdown">
+                        <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown">일상</a>
+                        <ul class="dropdown-menu">
+                            <li><a href="daily_think.html">기업IQ단상</a></li>
+                             <li><a href="daily_trend.html">산업동향</a></li>
+                             <li><a href="daily_walk.html">책마을산책</a></li>
+                             <li><a href="daily_talk.html">잡다한 이야기</a></li>
                         </ul>
                     </li>
                     <!-- End 이야기 -->
@@ -139,15 +140,9 @@
                             Biziq 쉼터 
                         </a>
                         <ul class="dropdown-menu">
-                            <li>
-                                <a href="javascript:void(0);">자유게시판</a>
-                            </li>                           
-                            <li>
-                                <a href="javascript:void(0);">BA 강의실</a>
-                            </li>
-                             <li>
-                                <a href="javascript:void(0);">꼬시꼬시</a>
-                            </li>
+                            <li><a href="rest_board.html">자유게시판</a></li>                           
+                            <li><a href="rest_class.html">BA 강의실</a></li>
+                             <li><a href="#">꼬시꼬시</a></li>
                         </ul>
                     </li>
                     <!-- End 쉼터 -->
@@ -424,26 +419,26 @@
                     <!-- About -->
                     <div class="col-md-3 md-margin-bottom-40">
                         <a href="index.html"><img id="logo-footer" class="footer-logo" src="assets/img/logo2-default.png" alt=""></a>
-                        <p>About Unify dolor sit amet, consectetur adipiscing elit. Maecenas eget nisl id libero tincidunt sodales.</p>
-                        <p>Duis eleifend fermentum ante ut aliquam. Cras mi risus, dignissim sed adipiscing ut, placerat non arcu.</p>    
+                        <p>기업 아이큐 연구소 Business IQ Research Center</p>
+                        <p>CopyRight &copy; Business IQ Research Center 2005 ALL RIGHT RESERVED</p>    
                     </div><!--/col-md-3-->
                     <!-- End About -->
 
                     <!-- Latest -->
                     <div class="col-md-3 md-margin-bottom-40">
                         <div class="posts">
-                            <div class="headline"><h2>Latest Posts</h2></div>
+                            <div class="headline"><h2>사이트 정보</h2></div>
                             <ul class="list-unstyled latest-list">
                                 <li>
-                                    <a href="#">Incredible content</a>
+                                    <a href="#">사이트 역사</a>
                                     <small>May 8, 2014</small>
                                 </li>
                                 <li>
-                                    <a href="#">Best shoots</a>
+                                    <a href="#">개인정보 보호방침</a>
                                     <small>June 23, 2014</small>
                                 </li>
                                 <li>
-                                    <a href="#">New Terms and Conditions</a>
+                                    <a href="#">사이트 이용약관</a>
                                     <small>September 15, 2014</small>
                                 </li>
                             </ul>
@@ -453,26 +448,20 @@
                     
                     <!-- Link List -->
                     <div class="col-md-3 md-margin-bottom-40">
-                        <div class="headline"><h2>Useful Links</h2></div>
+                        <div class="headline"><h2>유용한 링크</h2></div>
                         <ul class="list-unstyled link-list">
-                            <li><a href="#">About us</a><i class="fa fa-angle-right"></i></li>
-                            <li><a href="#">Portfolio</a><i class="fa fa-angle-right"></i></li>
-                            <li><a href="#">Latest jobs</a><i class="fa fa-angle-right"></i></li>
-                            <li><a href="#">Community</a><i class="fa fa-angle-right"></i></li>
-                            <li><a href="#">Contact us</a><i class="fa fa-angle-right"></i></li>
+                            <li><a href="#">개발자 아라한사 사이트</a><i class="fa fa-angle-right"></i></li>
+                            <li><a href="#">협성대학교</a><i class="fa fa-angle-right"></i></li>
                         </ul>
                     </div><!--/col-md-3-->
                     <!-- End Link List -->                    
 
                     <!-- Address -->
                     <div class="col-md-3 map-img md-margin-bottom-40">
-                        <div class="headline"><h2>Contact Us</h2></div>                         
+                        <div class="headline"><h2>주소 정보</h2></div>                         
                         <address class="md-margin-bottom-40">
-                            25, Lorem Lis Street, Orange <br />
-                            California, US <br />
-                            Phone: 800 123 3456 <br />
-                            Fax: 800 123 3456 <br />
-                            Email: <a href="mailto:info@anybiz.com" class="">info@anybiz.com</a>
+                            경기도 화성시 봉담읍 상리 14 협성대학교 경영대학 전화 031-299-0843
+                            Email: <a href="mailto:info@anybiz.com" class="">biziq@naver.com</a>
                         </address>
                     </div><!--/col-md-3-->
                     <!-- End Address -->
