--- a/intro_history.html
+++ b/intro_history.html
@@ -73,7 +73,7 @@
                     <li class="topbar-devider"></li>   
                     <li><a href="page_login.html">로그인</a></li>
                     <li class="topbar-devider"></li> 
-                    <li><a href="page_registration.html">회원가입</a></li>  
+                    <li><a href="page_registration.html">회원가입</a></li>     
                 </ul>
             </div>
             <!-- End Topbar -->
@@ -91,11 +91,7 @@
             <div class="container">
                 <ul class="nav navbar-nav">
                     <!-- Home -->
-                    <li>
-                        <a href="index.html">
-                            홈
-                        </a>
-                    </li>
+                    <li><a href="index.html">홈</a></li>
                     <!-- End Home -->
 
                     <!-- 소개 -->                        
@@ -104,15 +100,11 @@
                             Biziq소개
                         </a>
                         <ul class="dropdown-menu">
-                            <li>
-                                <a href="intro_site.html">사이트 소개</a>
-                            </li>                           
-                            <li>
-                                <a href="intro_master.html">주인장 소개 </a>
-                            </li>
-                            <li>
-                                <a href="intro_history.html">사이트 히스토리</a>   
-                            </li>
+                            <li><a href="intro_site.html">사이트 소개#</a></li>                           
+                            <li><a href="intro_master.html">주인장 소개# </a></li>
+                            <li><a href="intro_history.html">사이트 히스토리#</a>   </li>
+                            <li><a href="intro_map.html">사이트 맵#</a></li>
+                            <li><a href="intro_map.html">공지사항@</a></li>
                         </ul>
                     </li>
                     <!-- End 소개 -->
@@ -123,15 +115,24 @@
                             Biziq이야기
                         </a>
                         <ul class="dropdown-menu">
-                            <li>
-                                <a href="javascript:void(0);">기업아이큐 단상</a>
-                            </li>                           
-                            <li>
-                                <a href="javascript:void(0);">일상</a>
-                            </li>
-                             <li>
-                                <a href="javascript:void(0);">책마을 산책</a>
-                            </li>
+                            <li><a href="talk_iqmodel.html">기업IQ 모델</a></li>                           
+                             <li><a href="talk_iq.html.html">기업IQ</a></li>
+                             <li><a href="talk_health.html">기업Health</a></li>
+                             <li><a href="talk_iqtool.html">기업IQ도구</a></li>
+                             <li><a href="talk_healthtool.html">기업Health도구</a></li>
+                             <li><a href="talk_iqaim.html">기업IQ목표</a></li>
+                        </ul>
+                    </li>
+                    <!-- End 이야기 -->
+
+                    <!-- 이야기 -->                        
+                    <li class="dropdown">
+                        <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown">일상</a>
+                        <ul class="dropdown-menu">
+                            <li><a href="daily_think.html">기업IQ단상</a></li>
+                             <li><a href="daily_trend.html">산업동향</a></li>
+                             <li><a href="daily_walk.html">책마을산책</a></li>
+                             <li><a href="daily_talk.html">잡다한 이야기</a></li>
                         </ul>
                     </li>
                     <!-- End 이야기 -->
@@ -142,15 +143,9 @@
                             Biziq 쉼터 
                         </a>
                         <ul class="dropdown-menu">
-                            <li>
-                                <a href="javascript:void(0);">자유게시판</a>
-                            </li>                           
-                            <li>
-                                <a href="javascript:void(0);">BA 강의실</a>
-                            </li>
-                             <li>
-                                <a href="javascript:void(0);">꼬시꼬시</a>
-                            </li>
+                            <li><a href="rest_board.html">자유게시판</a></li>                           
+                            <li><a href="rest_class.html">BA 강의실</a></li>
+                             <li><a href="#">꼬시꼬시</a></li>
                         </ul>
                     </li>
                     <!-- End 쉼터 -->
