--- a/page_login.html
+++ b/page_login.html
@@ -215,7 +215,7 @@
                     <hr>
 
                     <h4>비밀번호를 잊으셨습니까?</h4>
-                    <p>no worries, <a class="color-green" href="#">click here</a> to reset your password.</p>
+                    <p>걱정마세요 <a class="color-green" href="#">여기</a> 를 눌러서 비밀번호를 다시 발급받으세요</p>
                 </form>            
             </div>
         </div><!--/row-->
