biziq model updated.

--- a/intro_map.html
+++ b/intro_map.html
@@ -116,7 +116,7 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a href="talk_iqmodel.html;">기업IQ 모델</a></li>                           
-                             <li><a href="talk_iq.html.html">기업IQ</a></li>
+                             <li><a href="talk_iq.html">기업IQ</a></li>
                              <li><a href="talk_health.html">기업Health</a></li>
                              <li><a href="talk_iqtool.html">기업IQ도구</a></li>
                              <li><a href="talk_healthtool.html">기업Health도구</a></li>
