--- a/talk_health.html
+++ b/talk_health.html
@@ -175,7 +175,7 @@
     <div class="breadcrumbs-v1">
         <div class="container">
             <span>BizIq이야기</span>
-            <h1>기업IQ모델</h1>
+            <h1>기업 Health</h1>
         </div>
     </div>
     <!--=== End Breadcrumbs v1 ===-->
@@ -197,60 +197,29 @@
                                 <li>In <a href="#">BizIQ이야기</a></li>
                                 <li>Posted January 24, 2015</li>
                             </ul>
-                            <h2 class="title-v2">1. 기업 IQ 모델</h2>
-                            <p>정보기술을 이용하여 기업의 의사결정 역량을 높이는 방안, 즉 '기업 IQ 모델'은 두 개의 차원으로 설명된다. <br>아래 그림에서 보듯 X축은 '기업의 정보자원 관리역량 (organizational management capability on information resource)'이고, Y축은 '기업의 시야 (organizational horizons)'이다. <br>"BizIQ 이야기" 코너에서는 기본 개념 위주로 소개하고자 한다.</p>
+                            <h3>1. 건강의 척도 - 혈관계 (blood vessel system)</h3>
+                            <p>한 때 은행나무 추출액으로 만들었다는 건강 약제들이 중장년층에 어필하던 적이 있었다. 요즘에는 혈액 속의 혈전 (피찌꺼기)을 용해시켜 준다는 '감마 리놀렌산' 성분을 포함하는 약제들의 광고가 한창이다.<br> 
+한편 사람의 건강을 나타내는 바로메터로서 운동처방 트레이너들은 공통적으로 '심폐지구력'을 꼽는다고 한다. 바로 이 심폐지구력은 강인한 혈관계가 뒷받침 되어야 한다.<br><br>
 
-                            <img src="assets/img/talk/org_biziq_model-1.jpg">
+무슨 얘기를 하고자 하는가 하면, 인간의 건강에 대한 척도는 (물론 의학적으로 다양한 척도가 존재하겠으나) 혈관계가 얼마나 튼튼한가에 달려있다는 점이다. 유기체로서의 기업 조직 또한 이와 동일한 관계에서 파악할 수 있다. 
+아니! 경영 조직에도 혈관계가 존재하다니... <br></p>
+
+                            <img src="assets/img/talk/org_blood-vessel.jpg">
+                            <p>기업의 혈관계는 바로 정보기술 (주로 정보시스템과 통신망)로 비유할 수 있다. 구체적으로 기업의 정보시스템에는 조직 내에서 매일매일 벌어지는 의사결정 행위를 효율적으로 수행하기 위한 프로그램들이 들어 있는데, 프로그램은 다름아닌 의사결정에 필요한 데이터와 프로세스들의 모음이다. 프로세스는 기업이라는 유기체 내에 복잡하게 형성된 혈관계이며, 프로세스 혈관계 속에는 데이터라는 피가 흘러 다닌다는 점에서 기업 조직은 빈번히 인간과 같은 유기체에 비유되곤 한다.</p>
                                                 
-                            <h2 class="title-v2">2. 기업의 정보 자원 관리 역량</h2>
-                            <p>기업 IQ 모델의 첫 번째 축인 '기업의 정보관리 역량'은 90년대부터 본격화된 지식경영 (KM; knowledge management) 관련 연구들에서 도출하였다. 다섯 단계로 구성되는 정보관리 역량은 진화적인 특성을 갖는다. 각 절차를 살펴보도록 한다.</p>
+                            <h3>2. 경영의 정의 - 의사결정 흐름의 집합체</h3>
+                            <p>대부분의 사람들이 나이를 먹어감에 따라 겪게 되는 동맥경화증, 중풍, 심근경색, 뇌졸증 등의 무서운 성인병들은 바로 혈관계와 직접적인 관련성을 갖고 있다. 모두가 혈관 속에 피의 원활한 흐름이 막힘으로 인해 생기는 질병이다. 기업의 정보시스템도 이와 동일하다. 조직 시스템 내에 프로세스 (혈관)가 제대로 규명되어 설계되지 않았다면, 그리고 프로세스를 통해 조직 전반을 막힘 없이 돌아다녀야 할 데이터 (피)가 흘러주지 않는다면, 그 조직은 이미 동맥경화 증세를 앓고 있는 조직이다. 이런 조직들은 공통적으로 의사결정 흐름이 원활하지 않다는 특징을 지니고 있다. (수평적 의사결정 흐름으로는 자재 및 현금 흐름을 들 수 있고, 수직적 의사결정 흐름은 기안/결재 및 제안/심의 등을 들 수 있다.)</p>
 
- <h3>Step 1: Connecting (데이터 규명 및 확보)</h3>
-<p>의사결정 담당자가 업무에 필요한 정보를 용이하게 접근할 수 있어야 한다는 개념이다. 그러나, 보다 근본적으로는 의사결정의 효율성/효과성을 제고할 수 있는 정보가 무엇인지를 규명하는 조직 역량이 중요하다.</p>
+ <h3>3. 기업Health - 시스템 통합 (SI; system integration)</h3>
+<p>방대한 조직의 의사결정 흐름을 정보기술을 이용하여 원활하게 수행하고자 하는 시도를 시스템 통합이라 부른다. 시스템 통합의 역사는 기업 내에 컴퓨터가 도입된 역사와 그 궤를 같이 한다. 시스템 통합의 기원을 1960년대의 MRP까지로 거슬러 올라가 보면, 재화를 생산해 내는 기업 조직의 복잡한 업무 흐름 (work flow 또는 value chain)을 원활하게 수행하기 위한 노력에서 비롯되었다는 것을 알 수 있다.<br><br>
 
-<h3>Step 2: Organizing (데이터 구성)
-</h3><p>단계 1에서 정의된 데이터를 적절한 정보기술에 잘 저장해 두어야 한다. 데이터 구성에 사용되는 정보기술은 Excel과 같은 spread sheet이나 워드 프로세서 등의 초보적인 도구에서부터, 관계형 데이터베이스, 다차원 데이터베이스, 그룹웨어, 웹문서 등이 있다.</p>
+기업의 업무 흐름을 정보시스템에 원활하게 담기 위한 시도가 특별한 가이드라인 없이 미시적인 관점에서 1980년대까지 진행되었다. 그러다가 1980년대에 초반에 James Martin은 '정보공학 방법론 (IE; information engineering)'을 통해 기업의 의사결정 흐름을 데이터 중심으로 파악해야 한다고 역설한다. 데이터가 기업의 정보흐름에 가장 핵심적인 대상임에는 틀림 없으나, 이것만으로는 인간의 의사결정 행위를 정보기술이라는 그릇에 담기에는 역부족이다. 데이터를 효율적으로 정보시스템 내에 담기 위해서는 데이터를 뱉어 내는 프로세스가 또한 중요하다는 점을 역설한 것이 Hammer (1990)이며, 이 개념이 2000년도 이후에 '비즈니스 프로세스 관리 (BPM; Business Process Management)'로 진화하게 된다.<br><br>
 
-<h3>Step 3: Sharing (데이터 공유)</h3>
-<p>기업 내에서 의사결정 자료를 관리하는 1차적 목적은 바로 '데이터 공유'를 위한 것이다. 어떤 의사결정에 관련된 담당자나 부서, 그리고 조직 간에 필요한 정보를 서로 공유하는 과정이다.</p>
+순수하게 의사결정의 흐름만을 놓고 볼 때, 경영 활동은 데이터와 프로세스만으로 구성된다. 그러나 기업의 의사결정 과정 (업무)을 컴퓨터에게 위탁하고자 할 때에는 구성원들이 수행하고 있는 업무를 묘사해 주는 소프트웨어와, 이 프로그램을 담는 그릇인 하드웨어가 필요하다. 나아가 프로세스와 데이터라는 정보자원을 생산하고 관리할 책임자가 정해져야 하며, 유사한 정보자원 담당자들을 모아서 부서나 팀이라는 조직 구조를 형성하게 된다.<br><br>
 
-<h3>Step 4: Structuring (의미 도출)</h3>
-<p>Haeckel &amp; Nolan (1993)은 '의미 도출' 단계를 매우 잘 정의한 바 있다. 바로 기존의 데이터로부터 파생되는 '제3의 의미 있는 정보'를 지칭한다. 이런 유형의 정보를 도출하기 위한 목적으로 정보기술이 응용되는 것을 business intelligence라 부른다.
+이렇게 볼 때, 기업Health 즉 시스템 통합을 달성하기 위해서는 데이터, 프로세스, 소프트웨어, 하드웨어, 사람, 그리고 조직 등 여섯 개의 구성요소를 종합적으로 고려해야 한다는 결론에 이른다. 지금까지의 연구에 의하면 기업Health는 기업IQ의 전제조건이 되어야 한다는 주장에 이견을 제기하기 어렵다. 즉, 기업이 의사결정을 똘똘하게 수행하려면 먼저 시스템 통합이라는 난관을 극복해야 한다. 1990년대에 기업IQ의 대표 주자 격인 균형성과지표를 시장에 선보인 Kaplan 역시 BSC를 구성하는 재무/고객/내부 프로세스/혁신 등 네 개의 개념에서 공통적으로 프로세스 관리의 중요성을 강조하고 있는 점은 우연이 아니다. 이러한 배경에서 기업Health는 기업IQ의 필요조건 또는 전제조건으로 부를 수 있다.
 </p>
-<h3>Step 5: Disseminating (조직 내 전파)</h3>
-<p>step 4에서 도출된 '제3의 정보'를 단어의 의미 그대로 조직 내에 씨를 뿌리듯 전파하는 활동을 지칭한다. 일반적으로 기업 내에 존재하는 프로세스 개선 위원회, 경영혁신 위원회, 지식경영 위원회 등의 기구와 제안 제도, 인센티브 제도 등의 규정이 disseminating을 위한 장치이다.</p>
 
-<h2 class="title-v2">3. 기업의 시야</h2>
-
-<p>기업IQ 모델의 두 번째 축은 '기업의 시야'이다. 이 개념은 조직 내에서 의사결정을 수행할 때 가치사슬 (value chain)의 어느 수준에서 주로 커뮤니케이션이 발생하는가에 관한 것이다. 기업의 시야는 네 단계의 수준으로 구성된다. 각 수준에 대해 간단히 살펴본다.</p>
-
-<h3>Level 1: Unit process (단위 부서)</h3>
-<p>조직의 의사결정 흐름이 단위 부서 수준에 머물러 있다. 국내의 경우 1980년대가 이 시기에 해당되는데, 당시만해도 회계패키지, 자재패키지, 인사패키지 등의 모듈식 소프트웨어가 왕성하게 개발되고 판매되던 시기이다. 당연히 기업의 정보관리도 단위 부서 수준에서만 규명되고 관리되었다.</p>
-
-<h3>Level 2: Value chain (가치사슬, 즉 기업 전체 수준)</h3>
-<p>조직의 의사결정이 전사적 차원에서 통합되는 단계이다. 1990년대부터 본격적으로 국내 기업들에 도입되던 ERP는 전사적 수준의 기업 시야를 반영한 시스템이다.
-</p>
-<h3>Level 3: Adjacent value chain (인접 가치사슬)</h3>
-<p>한 기업의 가치사슬에 인접한 가치사슬은 크게 공급자와 고객/고객사로 대별된다. 이 수준은 기업의 의사결정 시야가 단순히 기업 내부에 국한되지 않고 후방사슬 (backward chain) 쪽으로는 공급사로, 그리고 전방사슬 (forward chain) 쪽으로는 고객으로 확산되는 시점이다. 공급사로부터 시작되어 고객에 이르는 의사결정 흐름을 통합하고자 하는 시도는 '공급망 관리 (SCM; supply chain management)'라는 개념을 낳았으며, 전방사슬의 고객 관련 의사결정을 통합하고 효율적으로 관리하고자 하는 시도는 '고객관계관리 (CRM; customer relationship management)'로 발현되었다.
-</p>
-<h3>Level 4: commercial chain (상업사슬)</h3>
-<p>기업의 시야가 고도로 진화하면 후방사슬과 전방사슬이 (마치 쇠사슬처럼 이어진) 여러 개의 가치사슬로 구성되는 네트워크 형상을 갖게 된다. 일견 간단해 보이지만, 맞춤형 컴퓨터로 성공한 Dell사의 의사결정 수준이 바로 상업사슬 수준에 달해 있다. 또한 미국의 의료업계에서 성공적으로 도입된 '신속대응시스템 (QR; quick response)'도 고전적인 상업사슬 수준의 시스템에 속한다. 인터넷을 소위 정보기술 혁명이라 지칭하는 이유도 바로 조직의 시야를 상업사슬 수준으로 끌어 올리는 획기적인 수단이기 때문이다.
-</p>
-<h3>Level 5: networking (네트워크 조직)</h3>
-<p>네트워킹은 level 4의 상업사슬과 인터넷의 융합으로 완성된 형태로, 2000년 이후 본격적으로 거론되었다. 또한 네트워킹은 '협업 (collaboration)'과 동의어로 간주할 수 있다. 2002년도에 IBM에서 'IT on Demand'라는 개념을 제시하는 한편, 가트너 그룹 (Gartner Group)은 '실시간 경영 (RTE; Real-Time Enterprise)'을, 그리고 액센츄어사 (Accenture)는 STP (Straight-forward Processing) 개념을 선보였다. 이들은 모두 동일한 목표을 지향하고 있는데, 기본 개념은 상업사슬을 네트워크 조직 형태로 구성하는 것이다. 네트워크 조직에는 아웃소싱 (outsourcing), 인수 및 합병 (M&A), 전략적 제휴 (strategic alliance), 그리고 가상조직 (virtual organization) 등이 있다. e-비즈니스 영역에서는 1995년 워드 커닝엄 (Ward Cunningham)이 만든 WikiWikiWeb - 최근에는 단순히 위키 (Wiki)로 부름 - 의 응용 분야가 모두 Networking 레벨의 산출물들이다.
-</p>
-<h2 class="title-v2">4. 기업IQ와 기업Health</h2>
-
-<h3>기업Health </h3>
-<p>기업Health란 한 기업이 '시스템 통합 (SI; system integration)'을 관리하는 역량으로 정의된다. 위의 그림에서 보듯 기업Health는 의사결정에 필요한 정보를 (1) 사전에 포착하여 (2) 이 정보를 자료저장소에 잘 구성해서 넣어 두었다가 (3) 조직 전체적으로 정보를 공유하는 역량으로 파악할 수 있다. 기업Health의 핵심적인 사상은 바로 시스템 통합이며, 이 사상의 기치 아래 탄생한 제품들이 ERP, SCM, EAI, RTE, 그리고 최근의 Wiki와 같은 것들이다. 한편 상품으로 보기에는 좀 무리가 있고 기업Health를 달성하는 방법론 내지는 접근법으로 사용되는 개념이 데이터 모델링과 프로세스 모델링이다. 
-기업IQ를 높이기 위해서는 반드시 기업Health 강화가 선행되어야 하므로, 기업Health를 기업IQ의 필요조건 또는 전제조건으로 간주한다.
-</p>
-<h3>기업IQ</h3>
-<p>위의 그림에는 기업IQ를 필요로 하는 두 개의 조직 역량이 있는데, 하나는 제3의 정보를 도출하는 'structuring'이고 다른 하나는 혁신위원회나 기업의 지식 확산을 조장할 수 있는 제도 등을 일컫는 'disseminating'이다. 기업IQ가 높은 조직의 특징은 단위 부서나 사업부 등의 기능들이 무엇이든 새로운 아이디어를 지속적으로 산출해 내며, 그 배경에는 지식을 창출하는 구성원들이 조직의 제도적 뒷받침에 의해 유형, 무형의 정당한 급부를 지불 받는다는 점이다.
-</p>
-<h2 class="title-v2">5. 기업IQ의 진화 방향</h2>
-<img src="assets/img/talk/org_biziq_model-2.jpg">
-<p>한 조직의 기업IQ는 위의 그림에서 보듯 모델의 대각선 방향으로 진화한다. 그 의미를 좀 더 살펴보자. 첫째, 조직은 우선 기업Health가 강화되어야 기업IQ를 모색할 수 있다. 즉 기업Health는 필요조건, 그리고 기업IQ는 충분조건으로 구분할 수 있다. 기업IQ가 우측 상단의 최종 단계에 도달한 조직은 의사결정의 효과성이 높을 뿐 아니라, 강력한 기업 문화를 창출할 수 있게 된다. 둘째, 기업IQ를 높이는 데 중요한 또 하나의 요소는 조직의 시야이다. 단위부서로부터 시작되는 조직의 시야는 기업 전체 및 인접 가치사슬을 거쳐 방대한 상업사슬 및 네트워킹 레벨로 진화한다.</p>
 
 
                            
